--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -9,7 +9,7 @@
 	"txt-incident-device-management": "Incident Device Management",
 	"txt-incident-unit-management": "Incident Unit Management",
 	"txt-incident-config-management": "Incident Config Management",
-	"txt-incident-log-management": "Incident Log Management",
+	"txt-incident-log-management": "Incident Send Log",
 	"txt-incident-events": "Incident Events",
 	"txt-incident-ttps": "TTPs",
 	"txt-prev-page": "Prev",
