List value used locals to maintain

--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -84,5 +84,30 @@
 		"2": "已審核",
 		"3": "已發布",
 		"4": "已刪除"
+	},
+	"protectType": {
+		"0": "防毒軟體",
+		"1": "網路防火牆",
+		"2": "電子郵件過濾機制",
+		"3": "入侵偵測及防禦機制",
+		"4": "應用程式防火牆",
+		"5": "進階持續性威脅攻擊防禦措施",
+		"6": "其他"
+	},
+	"industryType": {
+		"0": "能源",
+		"1": "水資源",
+		"2": "通訊傳播",
+		"3": "交通",
+		"4": "金融",
+		"5": "緊急救援及醫院",
+		"6": "中央及地方政府",
+		"7": "科學園區與工業區",
+		"8": "臺北區域聯防中心",
+		"9": "新北區域聯防中心",
+		"10": "桃園區域聯防中心",
+		"11": "臺中區域聯防中心",
+		"12": "臺南區域聯防中心",
+		"13": "高雄區域聯防中心"
 	}
 }
