--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -305,7 +305,7 @@
       "txt-queryName": "查詢條件名稱",
       "txt-addQuery": "新增查詢條件",
       "txt-noSavedQuery": "查無儲存條件",
-      "txt-noOpenQuery": "查詢條件不得為空白",
+      "txt-noOpenQuery": "查詢條件名稱不得為空白",
       "txt-addPatternScript": "定義告警條件",
       "txt-mark": "過濾 / 標示",
       "txt-clear": "清除條件",
