--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -22,6 +22,8 @@
 	"txt-send-fail": "Send Fail",
 	"txt-sendCheck": ", Whether to Send Incident directly?",
 	"txt-sendCheckHealth": "whether to Send Health Status Statistic csv ?",
+	"txt-send-status": "Send Status",
+	"txt-send-type": "Send Incident Type",
 	"txt-download": "Download",
 	"txt-required": "Empty Required Fields",
 	"txt-incident-event": "Security Monitoring",
