--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -138,6 +138,7 @@
   "txt-domain": "網域",
   "txt-commonModule": "一般模組",
   "txt-configModule": "設定模組",
+  "txt-host": "主機",
 
   "txt-dashboard": "Dashboard",
   "txt-threats": "Threats",
@@ -638,6 +639,7 @@
     "port": "接收Port",
     "format": "資料類型",
     "property": "資料屬性",
+    "ip": "IP",
     "name": "名稱",
     "value": "數值",
     "conditions": "條件",
@@ -659,7 +661,12 @@
     "txt-viewEvents": "日誌串流事件",
     "txt-overallDist": "日誌串流事件趨勢圖",
     "txt-syslogHost": "日誌所屬主機",
-    "txt-editHosts": "編輯主機",
-    "txt-timelineUnavailable": "趨勢圖資料不存在"
+    "txt-syslogInfo": "日誌串流基本資訊",
+    "txt-syslogHostList": "所屬主機列表",
+    "txt-editHosts": "編輯所屬主機資訊",
+    "txt-timelineUnavailable": "趨勢圖資料不存在",
+    "txt-backToList": "$t(txt-back)$t(txt-syslogManage)",
+    "txt-addHost": "新增所屬主機",
+    "txt-deleteHost": "$t(txt-delete)$t(txt-host)"
   }
 }
