Implement new Syslog API and add blocks for certain port numbers.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -658,6 +658,7 @@
     "txt-viewEvents": "View Events",
     "txt-overallDist": "Overall Distribution",
     "txt-editHosts": "Edit Hosts",
-    "txt-timelineUnavailable": "Timeline data is not available"
+    "txt-timelineUnavailable": "Timeline data is not available",
+    "txt-portNotAllowed": "Default port for system service is not allowed to use"
   }
 }
