--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -59,6 +59,8 @@
   "-5004": "IP不得空白",
   "-5005": "IP格式錯誤",
   "-5006": "新增IP失敗",
+  "-5007": "名稱已重複",
+  "-5008": "系統服務預設埠號不允許使用",
 
   "txt-param-null": "參數為空",
   "txt-account-fail" : "無法由AD獲取帳號資訊"
