--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -571,7 +571,7 @@
     "level": "機關等級",
     "industryType": "機關領域",
     "note": "備註",
-    "frequency": "觸發次數",
+    "frequency": "上月觸發次數",
     "updateDttm": "最後更新時間",
     "abbreviation": "機關英文簡稱",
     "type": "事件單類型",
