--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -138,6 +138,8 @@
   "txt-domain": "網域",
   "txt-commonModule": "一般模組",
   "txt-configModule": "設定模組",
+  "txt-maxDataMsg": "資料筆數最大為10,000筆",
+  "txt-es-data-over-limit": "超出搜尋範圍，請修改查詢條件",
 
   "txt-dashboard": "Dashboard",
   "txt-threats": "Threats",
@@ -327,8 +329,7 @@
       "txt-addFilter": "$t(txt-add2)$t(txt-filter)",
       "txt-deleteFilter": "$t(txt-delete)查詢條件",
       "txt-viewRule": "$t(txt-view)$t(txt-alert)$t(txt-rule)",
-      "txt-downloadMalware": "$t(txt-download)惡意程式",
-      "txt-maxDataMsg": "資料筆數最大為10,000筆"
+      "txt-downloadMalware": "$t(txt-download)惡意程式"
     }
   },
 
@@ -658,7 +659,6 @@
     "txt-viewEvents": "檢視日誌串流事件",
     "txt-overallDist": "日誌串流事件趨勢圖",
     "txt-editHosts": "編輯主機",
-    "txt-timelineUnavailable": "趨勢圖資料不存在",
-    "txt-portNotAllowed": "系統服務預設埠號不允許使用"
+    "txt-timelineUnavailable": "趨勢圖資料不存在"
   }
 }
