<FEAT> Modify en csv wording

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -21,7 +21,7 @@
 	"txt-send-success": "Send Success",
 	"txt-send-fail": "Send Fail",
 	"txt-sendCheck": ", Whether to Send Incident directly?",
-	"txt-sendCheckHealth": "whether to Send Health Status Statistic csv ?",
+	"txt-sendCheckHealth": "whether to Send Health Status Statistic CSV ?",
 	"txt-send-status": "Send Status",
 	"txt-send-type": "Send Incident Type",
 	"txt-download": "Download",
@@ -35,8 +35,8 @@
 	"txt-viewIncident-ttps": "View Correlation Analysis Incident",
 	"txt-editIncident-events": "Edit Security Monitoring Incident",
 	"txt-editIncident-ttps": "Edit Correlation Analysis Incident",
-	"txt-sendHealthCsv": "Send Health Status Statistic csv",
-	"txt-exportHealthCsv": "Export Health Status Statistic csv",
+	"txt-sendHealthCsv": "Send Health Status Statistic CSV",
+	"txt-exportHealthCsv": "Export Health Status Statistic CSV",
 	"txt-id": "ID:",
 	"txt-ttp-ets": "ETS",
 	"txt-ttp-obs-file": "File",
