--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -138,6 +138,7 @@
   "txt-domain": "Domain",
   "txt-commonModule": "Common Module",
   "txt-configModule": "Configuration Module",
+  "txt-host": "Host",
   "txt-maxDataMsg": "The maximum data count is 10,000",
   "txt-es-data-over-limit": "Exceed max queried number, please revise filters",
 
@@ -193,7 +194,9 @@
   "txt-pcapNotAvailable": "PCAP content is not available",
   "txt-file-format-error": "File format should be in ",
   "txt-delete-msg": "Are you sure you want to delete this",
-  "txt-account-unlock": "Are you sure you want to unlcok the account",
+  "txt-account-unlocked": "Account is locked",
+  "txt-account-unlock": "Are you sure you want to unlcok this account",
+  "txt-account-delete": "Are you sure you want to delete this account",
   "txt-commaSeparated": "separated by comma ,",
   "txt-privilegeError": "The privilege is still used by the account(s)",
 
@@ -340,9 +343,11 @@
     "txt-serviceNotifications": "Service Settings",
     "txt-edgeNotifications": "Edge Settings",
     "txt-alertNotifications": "Alert Settings",
+    "txt-socNotifications": "Soc Settings",
     "txt-serviceError": "Service Status Error",
     "txt-conectionsError": "Connections Status Error",
     "txt-dailyAlert": "Daily Alert Statistics",
+    "txt-sendResult": "Send Soc Notification",
     "txt-smtpServer": "SMTP Server",
     "txt-smtpPort": "SMTP Port",
     "txt-sender": "Sender",
@@ -639,6 +644,7 @@
     "port": "Received Port",
     "format": "Data Format",
     "property": "Data Property",
+    "ip": "IP",
     "name": "Name",
     "value": "Value",
     "conditions": "Conditions",
@@ -652,13 +658,20 @@
     "dstNode": "Destination Node",
     "txt-getLatest": "Get Latest Input Text",
     "txt-customFieldName": "Custom Field Name",
+    "txt-syslog": "Syslog",
     "txt-addSyslog": "Add Syslog",
     "txt-editSyslog": "Edit Syslog",
     "txt-deleteSyslogdeleteSyslog": "Delete Syslog",
     "txt-eventDist": " Event Distribution",
     "txt-viewEvents": "View Events",
     "txt-overallDist": "Overall Distribution",
+    "txt-syslogHost": "Syslog Host",
+    "txt-syslogInfo": "Syslog Info",
+    "txt-syslogHostList": "Syslog Host List",
     "txt-editHosts": "Edit Hosts",
-    "txt-timelineUnavailable": "Timeline data is not available"
+    "txt-timelineUnavailable": "Timeline data is not available",
+    "txt-backToList": "$t(txt-back) to $t(txt-syslogManage)",
+    "txt-addHost": "Add Host",
+    "txt-deleteHost": "$t(txt-delete) $t(txt-host)"
   }
 }
