--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -138,6 +138,7 @@
   "txt-domain": "網域",
   "txt-commonModule": "一般模組",
   "txt-configModule": "設定模組",
+  "txt-host": "主機",
   "txt-maxDataMsg": "資料筆數最大為10,000筆",
   "txt-es-data-over-limit": "超出搜尋範圍，請修改查詢條件",
 
@@ -193,7 +194,9 @@
   "txt-pcapNotAvailable": "找不到PCAP檔案",
   "txt-file-format-error": "檔案格式必須為",
   "txt-delete-msg": "確定要刪除",
-  "txt-account-unlock": "確定要解鎖",
+  "txt-account-unlocked": "帳號已鎖住",
+  "txt-account-unlock": "確定要解鎖帳號",
+  "txt-account-delete": "確定要刪除帳號",
   "txt-commaSeparated": "用逗號(,)區隔",
   "txt-privilegeError": "此角色還在被帳號使用中",
 
@@ -307,7 +310,7 @@
       "txt-queryName": "查詢條件名稱",
       "txt-addQuery": "新增查詢條件",
       "txt-noSavedQuery": "查無儲存條件",
-      "txt-noOpenQuery": "查詢條件不得為空白",
+      "txt-noOpenQuery": "查詢條件名稱不得為空白",
       "txt-addPatternScript": "定義告警條件",
       "txt-mark": "過濾 / 標示",
       "txt-clear": "清除條件",
@@ -340,9 +343,11 @@
     "txt-serviceNotifications": "服務通知設定",
     "txt-edgeNotifications": "Edge設備通知設定",
     "txt-alertNotifications": "告警通知設定",
+    "txt-socNotifications": "事件申報通知設定",
     "txt-serviceError": "服務狀態錯誤",
     "txt-conectionsError": "連線狀態錯誤",
     "txt-dailyAlert": "每日告警統計",
+    "txt-sendResult": "發布事件郵件通知",
     "txt-smtpServer": "SMTP主機",
     "txt-smtpPort": "SMTP Port",
     "txt-sender": "寄件者",
@@ -639,6 +644,7 @@
     "port": "接收Port",
     "format": "資料類型",
     "property": "資料屬性",
+    "ip": "IP",
     "name": "名稱",
     "value": "數值",
     "conditions": "條件",
@@ -652,13 +658,20 @@
     "dstNode": "目的節點",
     "txt-getLatest": "取得最新串流資料",
     "txt-customFieldName": "自訂欄位名稱",
-    "txt-addSyslog": "新增系統日誌",
+    "txt-syslog": "日誌串流",
+    "txt-addSyslog": "新增日誌串流",
     "txt-editSyslog": "編輯系統日誌",
     "txt-deleteSyslog": "刪除系統日誌",
     "txt-eventDist": "日誌串流事件趨勢圖",
-    "txt-viewEvents": "檢視日誌串流事件",
+    "txt-viewEvents": "日誌串流事件",
     "txt-overallDist": "日誌串流事件趨勢圖",
-    "txt-editHosts": "編輯主機",
-    "txt-timelineUnavailable": "趨勢圖資料不存在"
+    "txt-syslogHost": "日誌所屬主機",
+    "txt-syslogInfo": "日誌串流基本資訊",
+    "txt-syslogHostList": "所屬主機列表",
+    "txt-editHosts": "編輯所屬主機資訊",
+    "txt-timelineUnavailable": "趨勢圖資料不存在",
+    "txt-backToList": "$t(txt-back)$t(txt-syslogManage)",
+    "txt-addHost": "新增所屬主機",
+    "txt-deleteHost": "$t(txt-delete)$t(txt-host)"
   }
 }
