--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -20,6 +20,7 @@
 	"txt-send": "發布",
 	"txt-send-success": "發布成功",
 	"txt-send-fail": "發布失敗",
+	"txt-send-msg": "是否發布",
 	"txt-sendCheck": "，是否直接發布?",
 	"txt-sendCheckHealth": "是否手動發布健康狀態統計單?",
 	"txt-send-status": "發布狀態",
