Refresh account list after unclock account.

--- a/locales/en/accounts.json
+++ b/locales/en/accounts.json
@@ -41,7 +41,8 @@
   "l-privileges":"Privileges",
   "txt-delete":"Delete account?",
   "txt-unlock":"Unlock account?",
-  "txt-unlockAccountSuccess": "Account has been unlocked",
+  "txt-deleteAccountSuccess": "Account has been deleted successful",
+  "txt-unlockAccountSuccess": "Account has been unlocked successful",
   "txt-add-account":"Add account",
   "txt-edit-account":"Edit account",
   "txt-delete-account":"Delete account",
