--- a/locales/zh/accounts.json
+++ b/locales/zh/accounts.json
@@ -41,7 +41,8 @@
   "l-privileges":"角色",
   "txt-delete":"刪除此帳號?",
   "txt-unlock":"解鎖此帳號?",
-  "txt-unlockAccountSuccess": "解鎖帳號成功",
+  "txt-deleteAccountSuccess": "帳號刪除成功",
+  "txt-unlockAccountSuccess": "帳號解鎖成功",
   "txt-add-account":"新增帳號",
   "txt-edit-account":"編輯帳號",
   "txt-delete-account":"刪除帳號",
