Add Syslog add/edit page for new Syslog config page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -659,6 +659,7 @@
     "srcNode": "Source Node",
     "dstNode": "Destination Node",
     "txt-hostIP": "Host IP",
+    "txt-addHostIP": "Add IP",
     "txt-getLatest": "Get Latest Input Text",
     "txt-customFieldName": "Custom Field Name",
     "txt-syslog": "Syslog",
@@ -671,7 +672,9 @@
     "txt-syslogHost": "Syslog Host",
     "txt-syslogInfo": "Syslog Info",
     "txt-syslogHostList": "Syslog Host List",
+    "txt-editSyslogInfo": "Edit Syslog Info",
     "txt-editHosts": "Edit Hosts",
+    "txt-originalData": "Original Data",
     "txt-timelineUnavailable": "Timeline data is not available",
     "txt-backToList": "$t(txt-back) to $t(txt-syslogManage)",
     "txt-addHost": "Add Host",
