--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -659,6 +659,7 @@
     "srcNode": "來源節點",
     "dstNode": "目的節點",
     "txt-hostIP": "主機IP",
+    "txt-addHostIP": "新增IP",
     "txt-getLatest": "取得最新串流資料",
     "txt-customFieldName": "自訂欄位名稱",
     "txt-syslog": "日誌串流",
@@ -671,7 +672,9 @@
     "txt-syslogHost": "日誌所屬主機",
     "txt-syslogInfo": "日誌串流基本資訊",
     "txt-syslogHostList": "所屬主機列表",
+    "txt-editSyslogInfo": "編輯日誌串流",
     "txt-editHosts": "編輯所屬主機資訊",
+    "txt-originalData": "原始資料",
     "txt-timelineUnavailable": "趨勢圖資料不存在",
     "txt-backToList": "$t(txt-back)$t(txt-syslogManage)",
     "txt-addHost": "新增所屬主機",
