Implement add/edit for syslog config page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -651,18 +651,16 @@
     "value": "Value",
     "conditions": "Conditions",
     "query": "Query",
-    "filter": "Filter",
-    "relationship": "Relationship",
     "dataSampleInput": "Data Sample Input",
     "matchPattern": "Match Pattern",
     "dataProperty": "Data Property",
     "srcNode": "Source Node",
     "dstNode": "Destination Node",
+    "txt-formatSettings": "Format Settings",
+    "txt-relationship": "Relationship",
     "txt-hostIP": "Host IP",
-    "txt-addHostIP": "Add IP",
     "txt-getLatest": "Get Latest Input Text",
     "txt-customFieldName": "Custom Field Name",
-    "txt-syslog": "Syslog",
     "txt-addSyslog": "Add Syslog",
     "txt-editSyslog": "Edit Syslog",
     "txt-deleteSyslogdeleteSyslog": "Delete Syslog",
