--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -651,18 +651,16 @@
     "value": "數值",
     "conditions": "條件",
     "query": "標示",
-    "filter": "格式設定",
-    "relationship": "關聯設定",
     "dataSampleInput": "串流資料",
     "matchPattern": "Pattern設定",
     "dataProperty": "資料解譯結果",
     "srcNode": "來源節點",
     "dstNode": "目的節點",
+    "txt-formatSettings": "格式設定",
+    "txt-relationship": "關聯設定",
     "txt-hostIP": "主機IP",
-    "txt-addHostIP": "新增IP",
     "txt-getLatest": "取得最新串流資料",
     "txt-customFieldName": "自訂欄位名稱",
-    "txt-syslog": "日誌串流",
     "txt-addSyslog": "新增日誌串流",
     "txt-editSyslog": "編輯系統日誌",
     "txt-deleteSyslog": "刪除系統日誌",
