Complete geography page for Edge section.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -399,6 +399,7 @@
     "txt-edgeEditPastEndDate": "Edge end date must be a future date",
     "txt-ipValidationFail": "Please enter a valid IP:Port address",
     "txt-threatDateErr": "Date cannot be a future date",
+    "txt-coordinateErr": "Please enter a valid longitude/latitude value",
     "statistics": {
       "txt-sourceIndicators": "Source Indicators",
       "txt-indicatorsTrend": "Indicators Trend",
