Add service name and status list for Edge table.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -383,6 +383,7 @@
     "txt-anyTime": "Any Time",
     "txt-customTime": "Custom Time",
     "txt-memo": "Memo",
+    "txt-serviceName": "Service Name",
     "txt-edgeUpdateSuccess": "Edge is updated successfully",
     "txt-edgeUpdateFail": "Error, please try again",
     "txt-edgeEditSuccess": "Edge is added/updated successfully",
