--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -48,6 +48,7 @@
   "txt-edit": "編輯",
   "txt-add": "新增",
   "txt-add2": "加入",
+  "txt-query": "查詢",
   "txt-remove": "移除",
   "txt-refresh": "更新",
   "txt-plsSelect": "請選擇",
@@ -364,6 +365,7 @@
 
   "edge-management": {
     "txt-geography": "地理分布",
+    "txt-addThreat": "新增威脅情資",
     "txt-uploadThreat": "上傳威脅情資",
     "txt-basicInfo": "基本資訊",
     "txt-editEdge": "編輯Edge",
