<FIX> Fixed incident required data check in frontend

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -40,11 +40,12 @@
 	"txt-exportHealthCsv": "Export Health Status Statistic CSV",
 	"txt-id": "ID:",
 	"txt-ttp-ets": "ETS",
-	"txt-ttp-obs-file": "File",
-	"txt-ttp-obs-uri": "URI",
-	"txt-ttp-obs-socket": "Socket",
+	"txt-ttp-obs-file": "Malicious File",
+	"txt-ttp-obs-uri": "Malicious URI",
+	"txt-ttp-obs-socket": "Malicious IP",
 	"txt-srcIp": "Source IP",
 	"txt-autoSend": "Monthly Auto",
+	"txt-mustOne": "must required one malicious info",
 	"unit": {
 		"txt-default": "Default Unit",
 		"txt-isDefault": "Yes",
