Continue working on the Config Edge Add Threats page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -78,6 +78,7 @@
   "txt-enterIP": "Enter IP",
   "txt-enterName": "Enter Name",
   "txt-enterKeyword": "Enter Keywords",
+  "txt-plsEnterKeyword": "Please Enter Keywords",
   "txt-floor": "Floor",
   "txt-floorPlan": "Floor Plan",
   "txt-floorMap": "Floor Map",
@@ -385,6 +386,7 @@
     "txt-anyTime": "Any Time",
     "txt-customTime": "Custom Time",
     "txt-memo": "Memo",
+    "txt-deleteThreats": "$t(txt-delete) Threats",
     "txt-edgeUpdateSuccess": "Edge is updated successfully",
     "txt-edgeUpdateFail": "Error, please try again",
     "txt-edgeEditSuccess": "Edge is added/updated successfully",
