--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -78,6 +78,7 @@
   "txt-enterIP": "輸入IP",
   "txt-enterName": "輸入名字",
   "txt-enterKeyword": "輸入關鍵字",
+  "txt-plsEnterKeyword": "請輸入關鍵字",
   "txt-floor": "樓層",
   "txt-floorPlan": "樓層結構",
   "txt-floorMap": "樓層圖",
@@ -385,6 +386,7 @@
     "txt-anyTime": "不限時段",
     "txt-customTime": "自訂時段",
     "txt-memo": "備忘錄",
+    "txt-deleteThreats": "$t(txt-delete)情資",
     "txt-edgeUpdateSuccess": "Edge更新成功",
     "txt-edgeUpdateFail": "Edge更新失敗",
     "txt-edgeEditSuccess": "Edge新增/編輯成功",
