--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -589,5 +589,11 @@
     "lastUpdateDttm": "最後更新",
     "queryScript": "Query Script",
     "severity": "Severity"
+  },
+  "threatsTableFields": {
+    "threatText": "情資內容",
+    "threatType": "情資類型",
+    "dataSourceType": "情資嚴重等級",
+    "createDttm": "建立時間 "
   }
 }
