Continue working on the Config Edge Add Threats page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -401,7 +401,7 @@
     "txt-edgeEditNoStartDate": "Edge start date is missing",
     "txt-edgeEditNoEndDate": "Edge end date is missing",
     "txt-edgeEditPastEndDate": "Edge end date must be a future date",
-    "txt-ipValidationFail": "Please enter a valid IP:Port address",
+    "txt-ipValidationFail": "Please enter a valid IP/Domain format",
     "txt-threatDateErr": "Date cannot be a future date",
     "txt-coordinateErr": "Please enter a valid longitude/latitude value",
     "statistics": {
