--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -402,8 +402,10 @@
     "txt-edgeEditNoEndDate": "Edge結束時間不得為空白",
     "txt-edgeEditPastEndDate": "Edge結束時間不得為過去時間",
     "txt-ipValidationFail": "請輸入正確IP/Domain格式",
-    "txt-threatDateErr": "時間不得為未來時間",
-    "txt-coordinateErr": "請輸入正確的經緯度",
+    "txt-threatDateError": "時間不得為未來時間",
+    "txt-coordinateError": "請輸入正確的經緯度",
+    "txt-edgeFormatError": "請檢查格式及必填欄位",
+    "txt-addSuccess": "威脅情資新增成功",
     "statistics": {
       "txt-sourceIndicators": "情資類型統計圓餅圖",
       "txt-indicatorsTrend": "每日情資更新數量長條圖",
