--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -107,7 +107,8 @@
         "status-term": "DNS STATUS Term"
     },
     "icmpType": "ICMP Type",
-    "icmpCode": "ICMP Code"
+    "icmpCode": "ICMP Code",
+    "decoderType": "Decoder"
   },
   "dnsFields": {
     "_tableMenu_": "",
