--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -142,6 +142,8 @@
   "txt-configModule": "Configuration Module",
   "txt-host": "Host",
   "txt-settings": "Settings",
+  "txt-item": "Item",
+  "txt-score": "Score",
   "txt-maxDataMsg": "The maximum data count is 10,000",
   "txt-es-data-over-limit": "Exceed max queried number, please revise filters",
 
@@ -484,7 +486,8 @@
       "txt-yara": "Scan Process",
       "txt-scanFile": "Scan File",
       "txt-gcb": "GCB",
-      "txt-ir": "IR"
+      "txt-ir": "IR",
+      "txt-fileIntegrity": "File Integrity"
     },
     "ir-type": {
       "txt-quick": "Quick IR",
