--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -456,6 +456,9 @@
     "txt-suspiciousFileCount": "Suspicious File Count",
     "txt-suspiciousFileName": "Suspicious Filename",
     "txt-suspiciousFilePath": "Suspicious File Path",
+    "txt-_MissingFile": "Missing File Path",
+    "txt-_ModifyFile": "Modify File Path",
+    "txt-_NewCreateFile": "New Create File Path",
     "txt-reCheck": "Re-check",
     "txt-reCompress": "Re-compress",
     "txt-passCount": "Pass",
