Complete HMD settings tab.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -459,6 +459,10 @@
     "txt-_MissingFile": "Missing File Path",
     "txt-_ModifyFile": "Modify File Path",
     "txt-_NewCreateFile": "New Create File Path",
+    "txt-includePath": "Include Path",
+    "txt-excludePath": "Exclude Path",
+    "txt-saveSettings": "Save",
+    "txt-restoreDefault": "Restore Default",
     "txt-reCheck": "Re-check",
     "txt-reCompress": "Re-compress",
     "txt-passCount": "Pass",
