Add HMD settings page in Topology Inventory.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -444,6 +444,7 @@
     "txt-uploadFailedIP": "IP address is incorrect, please try upload again.",
     "txt-uploadFailedMAC": "MAC format is incorrect, please try upload again.",
     "txt-uploadFailed": "The following IP contains error, please try again.",
+    "txt-hmdSettings": "HMD Settings",
     "txt-autoSettings": "Auto Settings",
     "txt-withHeader": "With Header",
     "txt-selectIP": "Please select IP field",
@@ -472,6 +473,7 @@
     "txt-success": "Total success count",
     "txt-fail": "Total fail count",
     "txt-syncYaraFail": "Sync YARA rule fail",
+    "txt-pathFormatError": "Please check the path format",
     "txt-irMsg": "IR data has been uploaded to",
     "txt-itemSelection": "Select IR Set",
     "txt-duplicatedIP": "IP already exists, please enter another IP",
