--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -444,6 +444,7 @@
     "txt-uploadFailedIP": "IP格式有錯誤，請重新上傳",
     "txt-uploadFailedMAC": "MAC格式有錯誤，請重新上傳",
     "txt-uploadFailed": "以下資料上傳失敗，請再試一次",
+    "txt-hmdSettings": "HMD設定",
     "txt-autoSettings": "自動執行設定",
     "txt-withHeader": "包含表頭",
     "txt-selectIP": "請選擇IP欄位",
@@ -472,6 +473,7 @@
     "txt-success": "上傳成功筆數",
     "txt-fail": "上傳失敗筆數",
     "txt-syncYaraFail": "同步YARA規則失敗",
+    "txt-pathFormatError": "請檢查路徑格式",
     "txt-irMsg": "IR資料已上傳至",
     "txt-itemSelection": "電腦採證",
     "txt-duplicatedIP": "IP已存在，請重新輸入",
