Update logic for Alert dialog PCAP download.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -267,7 +267,7 @@
     "txt-queryMore": "Query",
     "txt-queryEvents": "View Details Infomation",
     "txt-searthVirustotal": "Search Virustotal",
-    "txt-downloadPCAP": "Download PCAP",
+    "txt-downloadPCAP": "$t(txt-download) PCAP",
     "txt-downloadFile": "Download File",
     "txt-filterEmpty": "Filter empty packet",
     "txt-ipInfo": "IP Information",
