Remove PCAP menu and add download link from Alert details dialog.

--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -269,7 +269,6 @@
     "txt-searthVirustotal": "查詢 Virustotal",
     "txt-downloadPCAP": "$t(txt-download)PCAP",
     "txt-downloadFile": "下載惡意程式",
-    "txt-filterEmpty": "過濾無內容封包",
     "txt-ipInfo": "IP資訊",
     "txt-systemInfo": "所屬主機資訊",
     "txt-ownerInfo": "所屬人員資訊",
@@ -445,10 +444,12 @@
     "txt-uploadFailedMAC": "MAC格式有錯誤，請重新上傳",
     "txt-uploadFailed": "以下資料上傳失敗，請再試一次",
     "txt-hmdSettings": "HMD設定",
+    "txt-hmdDownload": "HMD$t(txt-download)",
     "txt-autoSettings": "自動執行設定",
     "txt-withHeader": "包含表頭",
     "txt-selectIP": "請選擇IP欄位",
     "txt-testQuery": "查詢測試",
+    "txt-gcbVersion": "GCB版本",
     "txt-backToList": "$t(txt-back)$t(txt-listText)",
     "txt-backToMap": "$t(txt-back)$t(txt-map)",
     "txt-lastUpdate": "最近更新時間",
