--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -269,7 +269,6 @@
     "txt-searthVirustotal": "Search Virustotal",
     "txt-downloadPCAP": "$t(txt-download) PCAP",
     "txt-downloadFile": "Download File",
-    "txt-filterEmpty": "Filter empty packet",
     "txt-ipInfo": "IP Information",
     "txt-systemInfo": "System",
     "txt-ownerInfo": "Owner",
@@ -445,10 +444,12 @@
     "txt-uploadFailedMAC": "MAC format is incorrect, please try upload again.",
     "txt-uploadFailed": "The following IP contains error, please try again.",
     "txt-hmdSettings": "HMD Settings",
+    "txt-hmdDownload": "HMD $t(txt-download)",
     "txt-autoSettings": "Auto Settings",
     "txt-withHeader": "With Header",
     "txt-selectIP": "Please select IP field",
     "txt-testQuery": "Test Query",
+    "txt-gcbVersion": "GCB Version",
     "txt-backToList": "$t(txt-back) to $t(txt-listText)",
     "txt-backToMap": "$t(txt-back) to $t(txt-map)",
     "txt-lastUpdate": "Last Update",
