add dashboard uif

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -128,6 +128,7 @@
   "txt-unstable": "Unstable",
   "txt-unknown": "Unknown",
   "txt-severity": "Severity",
+  "txt-subnet": "Subnet",
   "txt-data": "Data",
   "txt-selectFile": "Please select file",
   "txt-severity": "Severity",
