--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -128,6 +128,7 @@
   "txt-unstable": "不穩定",
   "txt-unknown": "未知",
   "txt-severity": "嚴重性",
+  "txt-subnet": "網段",
   "txt-data": "資料",
   "txt-selectFile": "請選擇檔案",
   "txt-severity": "嚴重等級",
