--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -163,7 +163,7 @@
   "txt-accountManage": "帳號管理",
   "txt-syslogManage": "系統日誌管理",
   "txt-syslogConfig": "系統日誌設定",
-  "txt-syslogPattern": "系統日誌Pattern",
+  "txt-systemDefinedPattern": "系統預設Pattern管理",
   "txt-serviceStatus": "服務狀態",
   "txt-networkInventory": "網路清單",
   "txt-productInfo": "產品資訊",
@@ -415,8 +415,8 @@
     }
   },
 
-  "severity-table": {
-    "txt-severityTable": "Severity Table",
+  "threat-severity-mapping": {
+    "txt-severityMapping": "情資嚴重等級管理",
     "txt-addSeverityTable": "新增Type",
     "txt-typeInfo": "Type Info",
     "txt-lastUpateTime": "最近更新時間",
@@ -424,8 +424,7 @@
     "txt-deleteSeverity": "$t(txt-delete)Severity Type"
   },
 
-  "syslog-pattern": {
-    "txt-patternScript": "Pattern Script",
+  "system-defined-pattern": {
     "txt-addPatternScript": "新增Pattern",
     "txt-patternInfo": "Pattern Info",
     "txt-lastUpateTime": "最近更新時間",
