--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -468,6 +468,7 @@
     "txt-restoreDefault": "還原預設值",
     "txt-reCheck": "重新檢測",
     "txt-reCompress": "重新壓縮",
+    "txt-yaraRule": "Yara Rule",
     "txt-passCount": "通過",
     "txt-totalItem": "總項目",
     "txt-total": "總上傳筆數",
