--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -54,6 +54,7 @@
   "-1005": "密碼已到期",
   "-1006": "密碼錯誤超過5次，帳號已鎖定，請使用者聯絡系統管理員解鎖",
   "-1007": "帳號服務失敗",
+  "-5000": "格式錯誤",
   "-5001": "Port number不得重複",
   "-5002": "IP不得重複",
   "-5003": "Match Pattern格式錯誤",
