Complete HMD Scan Process file path list and yara rule list.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -460,6 +460,7 @@
     "txt-suspiciousFileCount": "Suspicious File Count",
     "txt-suspiciousFileName": "Suspicious Filename",
     "txt-suspiciousFilePath": "Suspicious File Path",
+    "txt-filePathList": "File Path List",
     "txt-modifiedFileCount": "Modified files",
     "txt-_MissingFile": "Missing File Path",
     "txt-_ModifyFile": "Modify File Path",
@@ -470,7 +471,7 @@
     "txt-restoreDefault": "Restore Default",
     "txt-reCheck": "Re-check",
     "txt-reCompress": "Re-compress",
-    "txt-yaraRule": "Yara Rule",
+    "txt-yaraRules": "Yara Rules",
     "txt-passCount": "Pass",
     "txt-totalItem": "Total",
     "txt-total": "Total upload count",
