--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -460,6 +460,7 @@
     "txt-suspiciousFileCount": "可疑檔案數",
     "txt-suspiciousFileName": "可疑檔案名稱",
     "txt-suspiciousFilePath": "可疑檔案路徑",
+    "txt-filePathList": "掃描路徑",
     "txt-modifiedFileCount": "異動檔案數",
     "txt-_MissingFile": "刪除檔案路徑",
     "txt-_ModifyFile": "修改檔案路徑",
@@ -470,7 +471,7 @@
     "txt-restoreDefault": "還原預設值",
     "txt-reCheck": "重新檢測",
     "txt-reCompress": "重新壓縮",
-    "txt-yaraRule": "Yara Rule",
+    "txt-yaraRules": "Yara Rules",
     "txt-passCount": "通過",
     "txt-totalItem": "總項目",
     "txt-total": "總上傳筆數",
