--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -31,6 +31,8 @@
   "txt-alert": "Alert",
   "txt-rule": "Rule",
   "txt-update": "Update",
+  "txt-upgrade": "Upgrade",
+  "txt-upgradeSuccess": "Upgrade Success",
   "txt-upload": "Upload",
   "txt-uploadStatus": "Upload Status",
   "txt-uploadSuccess": "Upload Success",
@@ -143,6 +145,7 @@
   "txt-configModule": "Configuration Module",
   "txt-host": "Host",
   "txt-settings": "Settings",
+  "txt-setting-eng": "Setting",
   "txt-item": "Item",
   "txt-score": "Score",
   "txt-maxDataMsg": "The maximum data count is 10,000",
@@ -477,7 +480,6 @@
     "txt-total": "Total upload count",
     "txt-success": "Total success count",
     "txt-fail": "Total fail count",
-    "txt-syncYaraFail": "Sync YARA rule fail",
     "txt-pathFormatError": "Please check the path format",
     "txt-irMsg": "IR data has been uploaded to",
     "txt-itemSelection": "Select IR Set",
@@ -498,8 +500,8 @@
       "txt-connectionsFail": "Connections Fail"
     },
     "scan-list": {
-      "txt-yara": "Scan Process",
-      "txt-scanFile": "Scan File",
+      "txt-yara": "Yara Scan",
+      "txt-scanFile": "Malware",
       "txt-gcb": "GCB",
       "txt-ir": "IR",
       "txt-fileIntegrity": "File Integrity"
