--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -31,6 +31,8 @@
   "txt-alert": "告警",
   "txt-rule": "規則",
   "txt-update": "更新",
+  "txt-upgrade": "Upgrade",
+  "txt-upgradeSuccess": "Upgrade Success",
   "txt-upload": "上傳",
   "txt-uploadStatus": "上傳狀態",
   "txt-uploadSuccess": "上傳成功",
@@ -143,6 +145,7 @@
   "txt-configModule": "設定模組",
   "txt-host": "主機",
   "txt-settings": "設定",
+  "txt-setting-eng": "Setting",
   "txt-item": "項目",
   "txt-score": "評分",
   "txt-maxDataMsg": "資料筆數最大為10,000筆",
@@ -477,7 +480,6 @@
     "txt-total": "總上傳筆數",
     "txt-success": "上傳成功筆數",
     "txt-fail": "上傳失敗筆數",
-    "txt-syncYaraFail": "同步YARA規則失敗",
     "txt-pathFormatError": "請檢查路徑格式",
     "txt-irMsg": "IR資料已上傳至",
     "txt-itemSelection": "電腦採證",
@@ -498,8 +500,8 @@
       "txt-connectionsFail": "連線失敗"
     },
     "scan-list": {
-      "txt-yara": "Scan Process",
-      "txt-scanFile": "Scan File",
+      "txt-yara": "Yara Scan",
+      "txt-scanFile": "Malware",
       "txt-gcb": "GCB",
       "txt-ir": "IR",
       "txt-fileIntegrity": "File Integrity"
