--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -450,7 +450,12 @@
     "_host": "資料來源",
     "configId": "設定檔代碼",
     "configSource": "設定檔名稱",
-    "msg": "訊息"
+    "msg": "訊息",
+    "_eventDttm_": "事件接收時間",
+    "LoghostIp": "事件接收主機",
+    "Source": "事件來源",
+    "matchFlag": "比對旗幟",
+    "__insertTime": "事件儲存時間"
   },
   "hmdFields": {
     "ipDeviceUUID": "主機ID",
@@ -508,7 +513,7 @@
   "edgeFields": {
     "agentName": "名稱",
     "ipPort": "VPN IP",
-    "description": "Description",
+    "descriptionEdge": "Description",
     "keywords": "關鍵字",
     "serviceType": "服務種類",
     "connectionStatus": "連線狀態",
